--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,7 +27,7 @@ jobs:
           username: root
           password: qG5hZ7bC1j
           script: |
-            cd /Dostap-Backend
+            cd /root/Dostap-Backend
             git pull
-            go build -o bin
-            sudo systemctl restart bin.service
+            go build -o dostapp
+            sudo systemctl restart dostapp.service
