--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,8 +27,8 @@ jobs:
           username: root
           password: qG5hZ7bC1j
           script: |
-            cd /Dostap-Backend
-            git pull origin main --rebase
-            go build -o bin ./cmd/main.go
-            ./bin&
+            cd Dostap-Backend
+            git pull origin main
+            go build -o dostapp ./cmd/main.go
+            ./dostapp&
             disown
