--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,5 +31,6 @@ jobs:
             git pull origin main
             go build -o dostapp ./cmd/main.go
             ./dostapp&
+            disown
             echo "Hello"
             
