added nohup instead disown

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,6 +31,6 @@ jobs:
             git pull origin main
             pkill dostapp
             go build -o dostapp ./cmd/main.go
-            ./dostapp & disown 
+            nohup ./dostapp >dostapp.out 2>&1 & 
             echo "Hello"
             exit
