--- a/app/src/main/resources/application.conf
+++ b/app/src/main/resources/application.conf
@@ -1,4 +1,8 @@
 ktor {
+    deployment {
+        port = 8080
+        port = ${?PORT}
+    }
     application {
         modules = [ kz.dostap.app.MainKt.module ]
     }
