implemented AuthService and refactored plugins

--- a/app/src/main/resources/application.conf
+++ b/app/src/main/resources/application.conf
@@ -7,3 +7,9 @@ ktor {
         modules = [ kz.dostap.app.MainKt.module ]
     }
 }
+jwt {
+    secret = "secret"
+    issuer = "http://0.0.0.0:8080/"
+    audience = "http://0.0.0.0:8080/hello"
+    realm = "Access to 'hello'"
+}
